--- a/MCMS-Pokemons/Base.lproj/Main.storyboard
+++ b/MCMS-Pokemons/Base.lproj/Main.storyboard
@@ -17,8 +17,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="7uU-WZ-k1J">
-                                <rect key="frame" x="0.0" y="167" width="414" height="736"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="g9T-Pl-6un">
+                                <rect key="frame" x="16" y="64" width="302" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZxR-K9-TEX">
+                                <rect key="frame" x="360" y="64" width="30" height="30"/>
+                                <state key="normal" title="Add">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="onAddButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3yd-vC-UIz"/>
+                                </connections>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="7uU-WZ-k1J">
+                                <rect key="frame" x="0.0" y="177" width="414" height="736"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cellID" textLabel="LCL-Lo-711" detailTextLabel="gRK-ZZ-Wll" style="IBUITableViewCellStyleSubtitle" id="Sk6-70-3IB">
@@ -47,39 +61,52 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="B5W-FQ-iJO"/>
                                 </connections>
                             </tableView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="g9T-Pl-6un">
-                                <rect key="frame" x="16" y="64" width="302" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZxR-K9-TEX">
-                                <rect key="frame" x="344" y="64" width="46" height="30"/>
-                                <state key="normal" title="Button">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="ZxR-K9-TEX" secondAttribute="trailing" constant="8" id="6rs-Yq-lwN"/>
+                            <constraint firstItem="ZxR-K9-TEX" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="ADx-hJ-IOv"/>
+                            <constraint firstItem="g9T-Pl-6un" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="GS8-My-9rl"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7uU-WZ-k1J" secondAttribute="bottom" constant="-167" id="I39-Lz-Xqm"/>
                             <constraint firstItem="g9T-Pl-6un" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Pma-5E-pf2"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="g9T-Pl-6un" secondAttribute="trailing" constant="80" id="Unf-91-SGH"/>
                             <constraint firstAttribute="trailingMargin" secondItem="7uU-WZ-k1J" secondAttribute="trailing" constant="-16" id="a2E-Eb-sK2"/>
                             <constraint firstItem="7uU-WZ-k1J" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="baV-hR-y5S"/>
                             <constraint firstItem="g9T-Pl-6un" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="g7T-B3-1XJ"/>
-                            <constraint firstItem="7uU-WZ-k1J" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="167" id="wTa-IW-fau"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ZxR-K9-TEX" secondAttribute="trailing" constant="8" id="lqx-vv-rAJ"/>
+                            <constraint firstItem="g9T-Pl-6un" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="rpl-Ew-lSi"/>
                             <constraint firstItem="ZxR-K9-TEX" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="zKU-xb-ph4"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="IMf-vT-SSQ"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                     <connections>
+                        <outlet property="nameTextField" destination="g9T-Pl-6un" id="TIA-Tz-Srm"/>
                         <outlet property="tableView" destination="7uU-WZ-k1J" id="DeX-el-k1T"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1092" y="314"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="bCl-uA-WT9">
+            <objects>
+                <viewController id="2Na-Cm-yas" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="8wg-A3-0JQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="Qfg-9e-G4B"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ndJ-mk-IzG">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Gjv-dH-HRd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1673" y="314"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="FNF-yb-oZs">
