--- a/MCMS-Pokemons/Base.lproj/Main.storyboard
+++ b/MCMS-Pokemons/Base.lproj/Main.storyboard
@@ -35,7 +35,7 @@
                                 <rect key="frame" x="0.0" y="177" width="414" height="736"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cellID" textLabel="LCL-Lo-711" detailTextLabel="gRK-ZZ-Wll" style="IBUITableViewCellStyleSubtitle" id="Sk6-70-3IB">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cellID" textLabel="LCL-Lo-711" detailTextLabel="gRK-ZZ-Wll" style="IBUITableViewCellStyleSubtitle" id="Sk6-70-3IB">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Sk6-70-3IB" id="x7b-oV-nD2">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -104,25 +104,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pokemon Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="685-60-mog">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Pokemon Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="685-60-mog">
                                 <rect key="frame" x="137" y="72" width="140" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="5sF-mE-C3G"/>
-                                    <constraint firstAttribute="width" constant="140" id="HZ8-ry-Wsn"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" clipsSubviews="YES" alpha="0.0" contentMode="scaleToFill" fixedFrame="YES" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Q53-8N-fEr">
+                                <rect key="frame" x="137" y="72" width="125" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="centerX" secondItem="685-60-mog" secondAttribute="centerX" id="7Fz-ka-gGS"/>
-                            <constraint firstItem="685-60-mog" firstAttribute="top" secondItem="8wg-A3-0JQ" secondAttribute="bottom" constant="8" id="bsL-Mt-MsY"/>
-                        </constraints>
                     </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="Uu2-1i-erZ">
+                        <barButtonItem key="rightBarButtonItem" title="Edit" id="E41-jt-ZVx">
+                            <connections>
+                                <action selector="onEditButtonTapped:" destination="2Na-Cm-yas" id="bim-qs-67k"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                     <connections>
+                        <outlet property="editNameTextField" destination="Q53-8N-fEr" id="b4R-vQ-f5e"/>
                         <outlet property="pokemonNameLabel" destination="685-60-mog" id="nTI-Qy-UFI"/>
                     </connections>
                 </viewController>
