--- a/MCMS-Pokemons/Base.lproj/Main.storyboard
+++ b/MCMS-Pokemons/Base.lproj/Main.storyboard
@@ -31,8 +31,13 @@
                                     <action selector="onAddButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3yd-vC-UIz"/>
                                 </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="7uU-WZ-k1J">
-                                <rect key="frame" x="0.0" y="177" width="414" height="736"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nLE-LT-G1N">
+                                <rect key="frame" x="16" y="102" width="302" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="7uU-WZ-k1J">
+                                <rect key="frame" x="0.0" y="175" width="414" height="736"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cellID" textLabel="LCL-Lo-711" detailTextLabel="gRK-ZZ-Wll" style="IBUITableViewCellStyleSubtitle" id="Sk6-70-3IB">
@@ -70,12 +75,16 @@
                             <constraint firstAttribute="trailingMargin" secondItem="ZxR-K9-TEX" secondAttribute="trailing" constant="8" id="6rs-Yq-lwN"/>
                             <constraint firstItem="ZxR-K9-TEX" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="ADx-hJ-IOv"/>
                             <constraint firstItem="g9T-Pl-6un" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="GS8-My-9rl"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7uU-WZ-k1J" secondAttribute="bottom" constant="-167" id="I39-Lz-Xqm"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7uU-WZ-k1J" secondAttribute="bottom" constant="-175" id="I39-Lz-Xqm"/>
                             <constraint firstItem="g9T-Pl-6un" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Pma-5E-pf2"/>
                             <constraint firstAttribute="trailingMargin" secondItem="g9T-Pl-6un" secondAttribute="trailing" constant="80" id="Unf-91-SGH"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="nLE-LT-G1N" secondAttribute="trailing" constant="80" id="ZOn-Uk-Dag"/>
                             <constraint firstAttribute="trailingMargin" secondItem="7uU-WZ-k1J" secondAttribute="trailing" constant="-16" id="a2E-Eb-sK2"/>
                             <constraint firstItem="7uU-WZ-k1J" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="baV-hR-y5S"/>
+                            <constraint firstItem="7uU-WZ-k1J" firstAttribute="top" secondItem="nLE-LT-G1N" secondAttribute="bottom" constant="43" id="dKA-jC-EWG"/>
+                            <constraint firstItem="nLE-LT-G1N" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="fTB-1H-bVY"/>
                             <constraint firstItem="g9T-Pl-6un" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="g7T-B3-1XJ"/>
+                            <constraint firstItem="nLE-LT-G1N" firstAttribute="top" secondItem="g9T-Pl-6un" secondAttribute="bottom" constant="8" id="lis-eG-jmC"/>
                             <constraint firstAttribute="trailingMargin" secondItem="ZxR-K9-TEX" secondAttribute="trailing" constant="8" id="lqx-vv-rAJ"/>
                             <constraint firstItem="g9T-Pl-6un" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="rpl-Ew-lSi"/>
                             <constraint firstItem="ZxR-K9-TEX" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="zKU-xb-ph4"/>
@@ -84,6 +93,7 @@
                     <navigationItem key="navigationItem" id="IMf-vT-SSQ"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                     <connections>
+                        <outlet property="PokemonTypeTextField" destination="nLE-LT-G1N" id="Bb2-Wr-YxT"/>
                         <outlet property="nameTextField" destination="g9T-Pl-6un" id="TIA-Tz-Srm"/>
                         <outlet property="tableView" destination="7uU-WZ-k1J" id="DeX-el-k1T"/>
                     </connections>
@@ -115,8 +125,23 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RNy-9B-xDr">
+                                <rect key="frame" x="87" y="145" width="240" height="186"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="RNy-9B-xDr" secondAttribute="centerX" id="5sm-9C-FVl"/>
+                            <constraint firstItem="RNy-9B-xDr" firstAttribute="top" secondItem="ndJ-mk-IzG" secondAttribute="topMargin" constant="145" id="6dc-VY-5w8"/>
+                            <constraint firstItem="Qfg-9e-G4B" firstAttribute="top" secondItem="RNy-9B-xDr" secondAttribute="bottom" constant="361" id="KNf-MM-S2S"/>
+                            <constraint firstItem="RNy-9B-xDr" firstAttribute="leading" secondItem="ndJ-mk-IzG" secondAttribute="leadingMargin" constant="71" id="h6K-Rh-Ufw"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="RNy-9B-xDr" secondAttribute="trailing" constant="71" id="q5v-Id-6Ax"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="5sm-9C-FVl"/>
+                            </mask>
+                        </variation>
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="Uu2-1i-erZ">
@@ -130,6 +155,7 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                     <connections>
                         <outlet property="editNameTextField" destination="Q53-8N-fEr" id="b4R-vQ-f5e"/>
+                        <outlet property="pokemonImage" destination="RNy-9B-xDr" id="40X-Ri-N44"/>
                         <outlet property="pokemonNameLabel" destination="685-60-mog" id="nTI-Qy-UFI"/>
                     </connections>
                 </viewController>
